edition="2023";

package proto;
option go_package = "src/gen/proto;gen";
import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;


message Envelope {
  oneof payload {
    PlayerAction player_action = 1;
    StatusRequest status_request = 2;
  }
}


message PlayerAction {
  string player_id = 1;
  ActionType action = 2;
  int32 x = 3;
  int32 y = 4;
}

enum ActionType {
  NONE = 0;
  MOVE = 1;
  SHOOT = 2;
  DODGE = 3;
  PARRY = 4;
}

message ActionResult {
  bool success = 1;
  string message = 2;
}

message StatusRequest {
  string player_id = 1;
}

message GameState {
  repeated PlayerState players = 1;
  repeated WeaponState weapons = 2;
  int64 server_timestamp = 3;
}

message PlayerState {
  string player_id = 1;
  float x = 2;
  float y = 3;
  int32 health = 4;
  ActionType action = 5;
}

message WeaponState {
  string weapon_id = 1;
  string owner_id = 2;
  float x = 3;
  float y = 4;
}

service GameService {
  rpc GetStatus(StatusRequest) returns (GameState) {}
  rpc SendAction(PlayerAction) returns (ActionResult) {}
}
